# uk_electricity_consumption

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
analyses/: demand_prediction.ipynb  eda_cleaning.ipynb  model_training.ipynb  model_training.py
core/evaluation/: evaluate_predictions.py
core/feature_engineering/: feature_creation.py  standard_scaler.py
core/preprocessing/: data_loader.py  data_utils.py  prepare_data.py  uk_holidays.py
core/visualisation/: plot_utils.py
data/: sample_split.py
tests/future_enginerring/: test_create_features.py  test_standard_scaler.py
tests/preprocessing/: test_uk_holidays.py
