[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[project]
name = "uk_electricity_consumption"
dynamic = ["version"]
description = "A Python package for predicting UK electricity consumption"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Yuanjing Shi", email = "ys691@cam.ac.uk" }
]
keywords = ["data science", "energy", "machine learning", "technology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/yourusername/companies_package"
"Issues" = "https://github.com/yourusername/companies_package/issues"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "core"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = '3.8'
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true


[tool.docformatter]
pre-summary-newline = true
recursive = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.pytest.ini_options]
# This will be pytest's future default.
addopts = "--import-mode=importlib --cov=core"
pythonpath="."
