[metadata]
name = uk_electricity_consumption
description = Final project for Fundamentals of Data Science (Michaelmas 2024) at University of Cambridge
long_description = file: README.md
long_description_content_type = text/markdown
author = Yuanjing Shi
author_email = ys691@cam.ac.uk


[options]
include_package_data = true
install_requires =
python_requires = >=3.10
packages = find:


[options.packages.find]
include =
    core

[options.entry_points]
console_scripts =

[flake8]
max-line-length = 88
